# vectorama

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/matrix/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  square.rs  sub.rs
src/nalgebra/: matrix.rs  mod.rs  point.rs  quaternion.rs  vector.rs
src/nalgebra/common/: matrix.rs  point.rs  quaternion.rs  vector.rs
src/nalgebra/na033/: mod.rs
src/nalgebra/na034/: mod.rs
src/quaternion/: div.rs  mod.rs  mul.rs  unit.rs
src/scale/: mod.rs  scale2.rs  scale3.rs
src/translation/: mod.rs  translation2.rs  translation3.rs
src/vector/: mod.rs
src/vector/vec2/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  sub.rs
src/vector/vec3/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  sub.rs
src/vector/vec4/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  sub.rs
tests/: matrix_tests.rs  mod.rs  quaternion_tests.rs  scale_tests.rs  translation_tests.rs  vector2_tests.rs  vector3_tests.rs  vector4_tests.rs
tests/nalgebra/: mod.rs
tests/nalgebra/common/: matrix_tests.rs  quaternion_tests.rs  scale_tests.rs  translation_tests.rs
tests/nalgebra/na033/: mod.rs
tests/nalgebra/na034/: mod.rs
